More approaches to prediction and visualization

--- a/exploration.ipynb
+++ b/exploration.ipynb
@@ -26,7 +26,7 @@
     "df_test = pd.read_csv('test.csv', header=0)\n",
     "\n",
     "df_0 = df.copy()\n",
-    "df_test_0 = df_test.copy()\n"
+    "df_test_0 = df_test.copy()"
    ]
   },
   {
@@ -1030,7 +1030,7 @@
     "\n",
     "from sklearn.metrics import accuracy_score\n",
     "accuracy_score(Y, y_pred_train)\n",
-    "kmeans.cluster_centers_\n"
+    "kmeans.cluster_centers_"
    ]
   },
   {
@@ -1361,7 +1361,7 @@
     "    return accuracy_score(y_pred=pred_val, y_true=Y_val)\n",
     "\n",
     "print(prediction_accuracy(df_2, df_test_2))\n",
-    "print(prediction_accuracy(df, df_test))\n"
+    "print(prediction_accuracy(df, df_test))"
    ]
   },
   {
@@ -1696,8 +1696,7 @@
     "    X_train_reducted = pca.fit_transform(X_train)\n",
     "    X_test_reducted = pca.fit_transform(X_test)\n",
     "    return X_train_reducted, X_test_reducted\n",
-    "X_train_reducted, X_test_reducted = pca_transform(X_train, X_test)\n",
-    "\n"
+    "X_train_reducted, X_test_reducted = pca_transform(X_train, X_test)"
    ]
   },
   {
@@ -1714,7 +1713,7 @@
     "\n",
     "clf = linear_model.LogisticRegression(C=pow(10, -i + 5))\n",
     "clf = clf.fit(X_train_reducted, Y)\n",
-    "output = clf.predict(X_test_reducted)\n"
+    "output = clf.predict(X_test_reducted)"
    ]
   },
   {
@@ -1763,7 +1762,7 @@
     "clf.fit(X_train, Y)\n",
     "\n",
     "# use the model to predict the labels of the test data\n",
-    "output = clf.predict(X_test)\n"
+    "output = clf.predict(X_test)"
    ]
   },
   {
@@ -1794,7 +1793,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 3.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
